fix: remove focus ring rectangle from collapsed checkbox
Override the global input:focus box-shadow/outline that was causing
a tall background rectangle around the custom checkbox.

--- a/jira-plugin/options/options.scss
+++ b/jira-plugin/options/options.scss
@@ -1523,6 +1523,11 @@ button:disabled {
     position: relative;
     flex-shrink: 0;
 
+    &:focus {
+      box-shadow: none;
+      outline: none;
+    }
+
     &:checked {
       background: #0052cc;
       border-color: #0052cc;
